--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body, html{
-  background-color: #141717;
+  background-color: white;
+  background-color: #584b5f;
   margin: 0;
   padding: 0;
   height: 100%;
