--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body, html{
   background-color: white;
   background-color: #52598f;
-  /* background: linear-gradient(#505d94, #4e3752); */
+  background: linear-gradient(#505d94, #4e3752);
   margin: 0;
   padding: 0;
   height: 100%;
