--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body, html{
-  background-color: white;
   background-color: #52598f;
-  background: linear-gradient(#505d94, #4e3752);
+  background: linear-gradient(#52598f, #3a1d2b);
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
